--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=STA
+APP_ENV=prod
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://sta.agu.gov.br
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_CONNECTION=pgsql
+DB_HOST=172.18.1.91
+DB_PORT=5432
+DB_DATABASE=sta
+DB_USERNAME=conta
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
