--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ARQUIVOS_QWARE_RECEBIDOS="Z:\STA/PROCESSADOS/"
+ARQUIVOS_QWARE_PROCESSADOS="Z:\STA/RECEBIDOS/"
